--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,10 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
